feat: add main content with country cards and API integration

--- a/Web Development/Vanilla Js Projects/REST Countries API/style.css
+++ b/Web Development/Vanilla Js Projects/REST Countries API/style.css
@@ -18,7 +18,7 @@
     /* colors */
     --white : #ffffff;
     --light-gray-l-mode : #fafafa;
-    --dark-gray-l-mode : #858585;
+    --dark-gray-l-mode : #6e6e6e;
     --dark-blue : #2b3945;
     --dark-blue-l-mode : #111517;
     --dark-blue-d-mode : #202c37;
@@ -26,6 +26,10 @@
 
 body {
     background-color: var(--light-gray-l-mode);
+}
+
+img {
+    width: 100%;
 }
 
 /* utility class */
@@ -46,6 +50,7 @@ header {
 .header-section {
     width: 90%;
     margin: 0 auto;
+    max-width: 1400px;
     justify-content: space-between;
     align-items: center;
     min-height: 4rem;
@@ -59,4 +64,58 @@ header {
 
 .light-dark-mode span {
     font-weight: var(--600);
+}
+
+/* countries card */
+.countries-card {
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card {
+    display: inline-block;
+    margin-top: 4rem;
+    max-width: 250px;
+    background-color: var(--white);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.075);
+    padding-bottom: 1.2rem;
+    border-radius: 15px;
+    overflow: hidden;
+    text-decoration: none;
+    color: inherit;
+    transition: transform 0.1s ease-in-out;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card-content {
+    width: 80%;
+    margin-left: 1.3rem;
+    margin-top: 1.2rem;
+}
+
+.population {
+    margin-top: 0.8rem;
+}
+
+.country-name {
+    font-weight: var(--800);
+    font-size: var(--font-size-16);
+}
+
+.card-content span.country-name {
+    text-align: center;
+}
+
+.population,
+.region,
+.capital {
+    font-size: var(--font-size-14);
+    margin-bottom: 0.3rem;
+}
+
+.value {
+    color: var(--dark-gray-l-mode);
 }
