--- a/Web Development/Vanilla Js Projects/REST Countries API/countryStyle.css
+++ b/Web Development/Vanilla Js Projects/REST Countries API/countryStyle.css
@@ -14,6 +14,9 @@
 .flag-section img {
     width: 500px;
     height: 350px;
+    /* border: 0.2px grey; */
+    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.204); */
+    /* object-fit:cover */
 }
 
 .country-section {
