--- a/Web Development/Vanilla Js Projects/REST Countries API/countryStyle.css
+++ b/Web Development/Vanilla Js Projects/REST Countries API/countryStyle.css
@@ -11,9 +11,15 @@
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.362)
 }
 
+.flag-section {
+    width: 100%;
+    min-width: 300px;
+}
+
 .flag-section img {
-    width: 500px;
-    height: 350px;
+    /* width: 500px; */
+    width: 100%;
+    /* height: 350px; */
     /* border: 0.2px grey; */
     /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.204); */
     /* object-fit:cover */
