--- a/Web Development/Tailwind/tailwind-learnings/class-1/src/input.css
+++ b/Web Development/Tailwind/tailwind-learnings/class-1/src/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .btn {
+        @apply mt-4 bg-blue-600
+         text-white uppercase text-[12px] font-semibold  py-2 px-4 rounded
+                        sm:hover:bg-green-600
+                        lg:mt-6
+                        hover:bg-blue-500 hover:-translate-y-0.5 transform transition
+                        focus:outline-none focus:ring focus:ring-offset-2 focus:ring-gray-400 focus:ring-opacity-80
+                        active:bg-blue-700
+    }
+}
